Fixed the whitespace issues in other_simulation.txt and added all the test data to the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-sample.txt
-sample_disassembly.txt
-sample_simulation.txt
 project1.pdf
 target/
-simulation.txt
 build/
-other_disassembly.txt
-other_disassembly_mine.txt
-other_sample.txt
-other_simulation.txt
-other_simulation_mine.txt
-student_samples.txt
 disassembly.txt
+simulation.txt
+other_disassembly_mine.txt
+other_simulation_mine.txt
+other_test_cases.url
