Renamed to project to MIPSsim.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-project1.pdf
 target/
 build/
-disassembly.txt
-simulation.txt
-other_disassembly_mine.txt
-other_simulation_mine.txt
-other_test_cases.url
 proj1/
 proj2/
+.vscode/settings.json
